# faslib-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
fas/access/: global_fun_set.hpp  mem_fun_get.hpp  mem_fun_set.hpp
fas/aop/: alias.hpp
fas/except/: ad_deferred_except.hpp  ad_disabled_except.hpp  ad_except.hpp  ad_except_disable.hpp  throw_.hpp  throw_t.hpp  try_.hpp  try_t.hpp
fas/range/: moke_range.hpp  mrange.hpp
fas/serialization/: README.txt  ad_deser.hpp  aspect_deserializer.hpp  deserializer.hpp  except.hpp  f_clear.hpp  meta.hpp  parser.hpp  tags.hpp
fas/serialization/deser/: ad_access.hpp  ad_after.hpp  ad_after_deser.hpp  ad_back_inserter.hpp  ad_before.hpp  ad_brute_list.hpp  ad_container.hpp  ad_deser.hpp  ad_element.hpp  ad_enclosed.hpp  ad_entity.hpp  ad_entity_piece.hpp  ad_equal_content.hpp  (+40 more)
fas/type_list/: errorlist.hpp
fas/typemanip/: reference_wrapper.hpp
tests/: CMakeLists.txt
tests/access/: CMakeLists.txt  test_access.cpp
tests/except/: CMakeLists.txt  test_except.cpp
tests/serialization/: CMakeLists.txt
tests/serialization/json/benchmark/: CMakeLists.txt  benchmark.cpp  empty.cpp  fasjson.cpp  fasoldjson.cpp  protobuf.cpp  request.pb.cc  request.pb.h  request.proto  sprintf.cpp  types.hpp
tests/serialization/json/benchmark/fasold/fas/misc/: json.hpp
tests/serialization/json/benchmark/fasold/fas/misc/json/: json_number.hpp  json_string.hpp
tests/serialization/json/benchmark/fasold/fas/pattern/: type_list.hpp
tests/serialization/json/benchmark/fasold/fas/pattern/detail/: type_list.hpp
(+304 files in other folders)
